--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+bincode = "1.3.3"
 lazy_static = "1.5.0"
 prettytable = "0.10.0"
+serde = { version = "1.0", features = ["derive"] }
 tabled = "0.16.0"
