--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+actix = "0.13.5"
 bincode = "1.3.3"
 lazy_static = "1.5.0"
 prettytable = "0.10.0"
