--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -15,6 +15,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Install Rust nightly
+      run: rustup default nightly
     - uses: actions/checkout@v4
     - name: Build
       run: cargo build --verbose
